// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price> hook:styler 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  0
</Text>
`;

exports[`<Price> inject <Text> properties 1`] = `
<Text
  level={3}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> renders 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {currency} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Eur6.995,12
</Text>
`;

exports[`<Price> when {fixed} (0) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  6.995
</Text>
`;

exports[`<Price> when {fixed} (4) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  6.995,1235
</Text>
`;

exports[`<Price> when {locale} (es-ES) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> when {operator} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  +6.995,12
</Text>
`;

exports[`<Price> when {style} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      Object {
        "color": "#191919",
        "fontSize": 16,
        "fontWeight": "bold",
      },
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> when {symbol} (left) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  $6.995,12
</Text>
`;

exports[`<Price> when {symbol} (right) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  6.995,12€
</Text>
`;

exports[`<Price> when {value} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
      },
      Object {
        "fontSize": 16,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  6.995,12
</Text>
`;
